<resources>
    <string name="app_name">SrApp</string>

    <!-- Main activity -->
    <string name="main_activity_header_text_games">GAMES</string>
    <string name="main_activity_your_categories">Your categories</string>
    <string name="main_activity_text_categories">%1$s</string>

    <!-- Game details -->
    <string name="game_details_stats_place_holder">%1$s</string>
    <string name="game_details_stats_runs_amount">Total runs</string>
    <string name="game_details_stats_sum_of_best">Sum of Best</string>
    <string name="game_details_stats_sum_of_worst">Sum of Worst</string>
    <string name="game_details_stats_average">Average</string>
    <string name="game_details_your_stats">Your statistics</string>
    <string name="game_details_ranking">Ranking</string>
    <string name="game_details_ranking_runner_name">%1$s</string>
    <string name="game_details_ranking_runner_time">Time: %1$s</string>
    <string name="game_details_ranking_difference">Diff PB: %1$s / Best: %2$s</string>
    <string name="game_details_ranking_position">%1$d.</string>
    <string name="game_details_header_category_name">%1$s</string>
    <string name="game_details_header_time_personnel_best">PB: %1$s</string>
    <string name="game_details_header_level_name">%1$s</string>
    <string name="game_details_text_stats">%1$s</string>
    <string name="game_details_text_ranking">%1$s</string>
    <string name="game_details_content_image_description">Image level</string>

    <string name="games_header">Games</string>
    <string name="games_your_category">Your category</string>
    <string name="games_category_name">%1$s</string>
    <string name="games_category_position">%1$s: #%2$d</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--  Auth  -->
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="pseudo">Pseudo</string>
    <string name="already_a_member">Already a member ?</string>


    <string name="dont_have_an_account">Don’t have an account ?</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot password ?</string>

    <!-- Subcategories activity -->
    <string name="your_subcategories">Your subcategories</string>
    <string name="subcategories">SUBCATEGORIES</string>


    <string name="confirm_password_is_different">Those passwords didn\'t match.</string>
    <string name="password_too_short">This password is too short (At least 8 characters).</string>
    <string name="invalid_password">Password must contain at least 1 special character, 1 digit and 8 characters.</string>
    <string name="invalid_pseudo">Pseudo didn\'t must contain any special characters.</string>
    <string name="email_or_password_incorrect">The email address or password you entered is incorrect or the account does not exist.</string>
    <string name="auth_failed">An unexpected error occurred. Please try logging in again.</string>
    <string name="email_is_already_in_use_by_another_account">The email address is already in use by another account.</string>
    <string name="invalid_email">Invalid email address format.</string>
    <string name="field_is_required">This field is required.</string>
    <string name="success">Success !</string>
    <string name="it_does_not_exist">It does not exist.</string>

    <!--  Category form  -->
    <string name="category">Category</string>
    <string name="add_your_categories_title">Add your categories</string>
    <string name="add_your_categories_label">Ajouter vos popres catégories, vous pourrez par la suite ajouter des sous-catégories à celle-ci.</string>
    <string name="add_your_categories_name_title">AJOUTER UN NOM</string>
    <string name="add_your_categories_name_label">Ajouter un nom à votre catégorie celle-ci pourra être changer dans le futur.</string>
    <string name="add_your_categories_image_title">AJOUTER UNE IMAGE</string>
    <string name="add_your_categories_image_label">Ceci-ci n’est pas obligatoire, cliquer simplement sur suivant ci-dessous pour passer.</string>
    <string name="add_your_subcategories_title">Add your subcategories</string>
    <string name="add_your_subcategories_label">Ajouter une sous-catégorie, vos temps seront enregistrés ici. </string>
    <string name="add_your_subcategories_name_title">AJOUTER UN NOM</string>
    <string name="add_your_subcategories_name_label">Ajouter un nom à votre sous-catégorie celle-ci pourra être changer dans le futur.</string>
    <string name="add_your_subcategories_image_title">AJOUTER UNE IMAGE</string>
    <string name="add_your_subcategories_image_label">Ceci-ci n’est pas obligatoire, cliquer simplement sur suivant ci-dessous pour passer.</string>
    <string name="name_of_category">Nom de catégorie</string>
    <string name="name_of_subcategory">Nom de sous-catégorie</string>
    <string name="name">Name</string>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="subcategory">Subcategory</string>

    <string name="times">Times</string>
    <string name="your_times">Your times</string>
    <string name="time_ago">%1$d %2$s ago</string>
    <string name="year">year</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="second">second</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="years">years</string>
    <string name="all_runs">all runs</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="total_times">Total time(s)</string>
    <string name="best_rate">Best rate</string>
    <string name="total_bests">Total bests</string>
    <string name="last_best">Last best</string>
    <string name="account_created_at">Account created at</string>
    <string name="your_name">Name: %1$s</string>
    <string name="an_error_has_occured_please_try_again">An error has occurred. Please try again.</string>
    <string name="no_internet_connection_was_found">No internet connection was found.</string>
    <string name="display_milliseconds">Afficher les millisecondes</string>
    <string name="display_milliseconds_on_time_average_from_subcategory">Affiche les milliseconds sur la moyenne des temps d\'une sous-catégorie.</string>
    <string name="color">Couleur</string>
    <string name="delete">Delete</string>
    <string name="global">Global</string>
    <string name="best_is_handle_by_lowest_time">Le meilleur temps est géré en fonction du temps le plus bas.</string>
    <string name="best_time">Meilleur temps</string>
    <string name="management">Management</string>
    <string name="other">Autre</string>

    <!-- Permission -->
    <string name="permission">Permission</string>
    <string name="message_permission">To add an image, please enable permission</string>
    <string name="ok">OK</string>
    <string name="type_confirm_to_confirm">Type \"CONFIRM\" to confirm</string>
    <string name="confirm">Confirm</string>
    <string name="recently">recently</string>
    <string name="name_asc">name Z-A</string>
    <string name="name_desc">name A-Z</string>

</resources>