<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_header"
        android:elevation="60dp">


        <ImageView
            android:layout_width="116dp"
            android:layout_height="101dp"
            android:src="@drawable/logo"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TexViewAuthHeaderTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/register_screen_auth_text_end"
            android:layout_marginBottom="@dimen/register_screen_auth_text_bottom"
            android:text="Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- TODO("Add elevation to edits text / Bring closer icon and hint (Maybe, after tests)")-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_above="@id/linearLayout2"
        android:layout_below="@id/constraintLayout"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pseudo_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_width_auth"
            android:layout_height="wrap_content"
            android:hint="@string/pseudo"
            android:textColorHint="@color/light_gray"
            android:theme="@style/TextInputAuth"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/pink_gradient"
            app:counterEnabled="true"
            app:counterMaxLength="32"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:startIconDrawable="@drawable/ic_user"
            app:startIconTint="@color/light_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gilroy_light"
                android:inputType="text"
                android:lines="1"
                android:maxLength="32"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_width_auth"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_edit_text_register_screen"
            android:hint="@string/email"
            android:textColorHint="@color/light_gray"
            android:theme="@style/TextInputAuth"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/pink_gradient"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:startIconDrawable="@drawable/ic_envelope"
            app:startIconTint="@color/light_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gilroy_light"
                android:inputType="text"
                android:lines="1"
                android:maxLength="100"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_width_auth"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_edit_text_register_screen"
            android:hint="@string/password"
            android:textColorHint="@color/light_gray"
            android:theme="@style/TextInputAuth"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/pink_gradient"
            app:errorEnabled="true"
            app:helperText="@string/invalid_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:passwordToggleDrawable="@drawable/ic_eye"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/light_gray"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/light_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_light"
                android:inputType="text"
                android:lines="1"
                android:maxLength="100"
                android:maxLines="1"
                android:password="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/edit_text_width_auth"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_edit_text_register_screen"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/light_gray"
            android:theme="@style/TextInputAuth"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="25dp"
            app:boxCornerRadiusBottomStart="25dp"
            app:boxCornerRadiusTopEnd="25dp"
            app:boxCornerRadiusTopStart="25dp"
            app:boxStrokeColor="@color/pink_gradient"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:passwordToggleDrawable="@drawable/ic_eye"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/light_gray"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/light_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gilroy_light"
                android:inputType="text"
                android:lines="1"
                android:maxLength="100"
                android:maxLines="1"
                android:password="true" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <!-- TODO("Add colors gradient to button")-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="@dimen/edit_text_width_auth"
            android:layout_height="@dimen/edit_text_height_auth"
            android:fontFamily="@font/gilroy_light"
            android:letterSpacing="0.03"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:rippleColor="@color/pink_gradient" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_text_for_login_register_screen"
            android:layout_marginBottom="@dimen/bottom_text_for_login_register_screen"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/already_a_member"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/login_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/login"
                android:textColor="@color/pink_gradient"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>