<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_header"
        android:elevation="60dp">


        <ImageView
            android:layout_width="116dp"
            android:layout_height="101dp"
            android:src="@drawable/logo"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TexViewAuthHeaderTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/register_screen_auth_text_end"
            android:layout_marginBottom="@dimen/register_screen_auth_text_bottom"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout2"
        android:layout_below="@id/constraintLayout">

        <!-- TODO("Add elevation to edits text / Bring closer icon and hint (Maybe, after tests)")-->
        <LinearLayout
            android:layout_width="@dimen/edit_text_width_auth"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_edit_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/edit_text_width_auth"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textAppearance="@style/TextStyle"
                android:textColorHint="@color/light_gray"
                android:theme="@style/TextInputAuth"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/pink_gradient"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:startIconDrawable="@drawable/ic_envelope"
                app:startIconTint="@color/light_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gilroy_light"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:textAppearance="@style/TextStyle" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_edit_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/edit_text_width_auth"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_edit_text_register_screen"
                android:hint="@string/password"
                android:textAppearance="@style/TextStyle"
                android:textColorHint="@color/light_gray"
                android:theme="@style/TextInputAuth"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="25dp"
                app:boxCornerRadiusBottomStart="25dp"
                app:boxCornerRadiusTopEnd="25dp"
                app:boxCornerRadiusTopStart="25dp"
                app:boxStrokeColor="@color/pink_gradient"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:passwordToggleDrawable="@drawable/ic_eye"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@color/light_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gilroy_light"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:password="true"
                    android:textAppearance="@style/TextStyle" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/forgot_password"
                android:textColor="@color/on_surface"
                android:textSize="14sp" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <!-- TODO("Add colors gradient to button")-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/MaterialButtonStyle"
            android:layout_width="@dimen/edit_text_width_auth"
            android:layout_height="@dimen/edit_text_height_auth"
            android:fontFamily="@font/gilroy_light"
            android:letterSpacing="0.03"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textAppearance="@style/TextStyle"
            android:textSize="15sp"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
            app:rippleColor="@color/pink_gradient" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/gilroy_light"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/google_button_cardview"
            android:layout_width="@dimen/google_login_button_screen"
            android:layout_height="@dimen/google_login_button_screen"
            android:clickable="true"
            android:textAppearance="@style/TextStyle"
            app:shapeAppearance="@style/CardViewRound">

            <ImageView
                android:layout_width="@dimen/image_google_login_button_screen"
                android:layout_height="@dimen/image_google_login_button_screen"
                android:layout_gravity="center"
                android:src="@drawable/ic_google" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_text_for_login_register_screen"
            android:layout_marginBottom="@dimen/bottom_text_for_login_register_screen"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/register_text_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/gilroy_light"
                android:text="@string/register"
                android:textColor="@color/pink_gradient"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>