<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        layout="@layout/fragment_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/main_activity_header_height_with_status_bar"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_menu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_game_size_text_plus_and_fab"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_game_start_text"
                    android:fontFamily="@font/gilroy_light"
                    android:text="@string/your_subcategories"
                    android:textColor="@color/on_background"
                    android:textSize="@dimen/activity_game_text_size" />

                <TextView
                    android:id="@+id/text_your_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_game_start_text_clickable"
                    android:background="@drawable/shape_dashed_underline"
                    android:fontFamily="@font/gilroy_light"
                    android:layerType="software"
                    android:text="@string/main_activity_text_categories"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/activity_game_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical">


                <ImageButton
                    android:id="@+id/add_subcategory"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="@dimen/activity_game_button_add_size"
                    android:layout_height="@dimen/activity_game_button_add_size"
                    android:layout_marginEnd="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/next"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_plus"
                    android:tint="@color/primary" />


            </LinearLayout>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_subcategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <include
        layout="@layout/fragment_bottom_navigation_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>